[package]
name = "sn_chain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sn_block = { path = "../sn_block", version = "0.1.0"}
sn_cryptography = { path = "../sn_cryptography", version = "0.1.0"}
sn_proto = { path = "../sn_proto", version = "0.1.0"}
sn_store = { path = "../sn_store", version = "0.1.0"}
sn_transaction = { path = "../sn_transaction", version = "0.1.0"}
sn_merkle = { path = "../sn_merkle", version = "0.1.0"}

protobuf = "3.2.0"
hex = "0.4.3"
ed25519-dalek = "1.0.1"