[package]
name = "sn_consensus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sn_cryptography = { path = "../sn_cryptography", version = "0.1.0"}
sn_proto = { path = "../sn_proto", version = "0.1.0"}
sn_transaction = { path = "../sn_transaction", version = "0.1.0"}
sn_mempool = { path = "../sn_mempool", version = "0.1.0"}
sn_server = { path = "../sn_server", version = "0.1.0"}