[package]
name = "sn_node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# sn_chain = { path = "../sn_chain", version = "0.1.0"}
sn_cryptography = { path = "../sn_cryptography", version = "0.1.0"}
# sn_block = { path = "../sn_block", version = "0.1.0"}
sn_proto = { path = "../sn_proto", version = "0.1.0"}
# sn_store = { path = "../sn_store", version = "0.1.0"}
sn_transaction = { path = "../sn_transaction", version = "0.1.0"}
# sn_utilites = { path = "../sn_utilites", version = "0.1.0"}

hex = "0.4.3"
futures = "0.3.28"
ed25519-dalek = "1.0.1"
slog = "2.7.0"
slog-term = "2.9.0"
slog-async = "2.7.0"
tokio = "1.27.0"
tonic = "0.9.1"
anyhow = "1.0.70"
rand = "0.8.5"
env_logger = "0.10.0"