[package]
name = "vec_block"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vec_cryptography = { path = "../vec_cryptography", version = "0.1.0"}
vec_proto = { path = "../vec_proto", version = "0.1.0"}
vec_merkle = { path = "../vec_merkle", version = "0.1.0" }

sha3 = "0.10.6"
prost = "0.11.8"
tokio = "1.28.0"
thiserror = "1.0.40"