[package]
name = "vec_crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vec_proto = { path = "../vec_proto", version = "0.1.0"}
vec_storage = { path = "../vec_storage", version = "0.1.0"}
vec_errors = { path = "../vec_errors", version = "0.1.0"}

rand = "0.8.0"
sha3 = "0.10.6"
curve25519-dalek-ng = "4.1.1"
bs58 = "0.5.0"
digest = "0.10.7"
bulletproofs = "4.0.0"
merlin = "3.0.0"
prost = "0.11.9"
sled = "0.34.7"
byteorder = "1.4.3"