[package]
name = "vec_cryptography"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

ed25519-dalek = "1.0.0"
rand = "0.8.0"
sha3 = "0.10.6"
arrayref = "0.3.6"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"