[package]
name = "vec_errors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.40"
tonic = "0.9.2"
http = "0.2.9"
ed25519-dalek = "1.0.1"
bincode = "1.3.3"
reqwest = "0.11.18"
tokio = "1.28.1"
sled = "0.34.7"