[package]
name = "vec_mempool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vec_cryptography = { path = "../vec_cryptography", version = "0.1.0"}
vec_proto = { path = "../vec_proto", version = "0.1.0"}
vec_transaction = { path = "../vec_transaction", version = "0.1.0"}

hex = "0.4.3"
slog = "2.7.0"
tokio = "1.28.0"
slog-term = "2.9.0"
slog-async = "2.7.0"
log = "0.4.17"