[package]
name = "vec_mempool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vec_crypto = { path = "../vec_crypto", version = "0.1.0"}
vec_proto = { path = "../vec_proto", version = "0.1.0"}
vec_utils = { path = "../vec_utils", version = "0.1.0"}

hex = "0.4.3"
slog = "2.7.0"
tokio = "1.28.0"
slog-term = "2.9.0"
slog-async = "2.7.0"
log = "0.4.17"
dashmap = "5.4.0"
futures = "0.3.28"