[package]
name = "vec_merkle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vec_proto = { path = "../vec_proto", version = "0.1.0"}
vec_utils = { path = "../vec_utils", version = "0.1.0"}
vec_errors = { path = "../vec_errors", version = "0.1.0"}
vec_macros = { path = "../vec_macros", version = "0.1.0"}

sha3 = "0.10.6"
protobuf = "3.2.0"
prost = "0.11.8"
prost-derive = "0.11.8"
tokio = "1.28.0"
rayon = "1.7.0"

