[package]
name = "vec_node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vec_crypto = { path = "../vec_crypto", version = "0.1.0"}
vec_proto = { path = "../vec_proto", version = "0.1.0"}
vec_utils = { path = "../vec_utils", version = "0.1.0"}
vec_mempool = { path = "../vec_mempool", version = "0.1.0"}
vec_chain = { path = "../vec_chain", version = "0.1.0"}
vec_storage = { path = "../vec_storage", version = "0.1.0"}
vec_merkle = { path = "../vec_merkle", version = "0.1.0"}
vec_errors = { path = "../vec_errors", version = "0.1.0"}

hex = "0.4.3"
futures = "0.3.28"
tokio = { version = "1.27.0", features = ["full"] }
tonic = { version = "0.9.2", features = ["tls", "transport"] }
serde = "1.0.160"
rcgen = "0.10.0"
pem = "2.0.1"
bincode = "1.3.3"
rand = "0.8.5"
tokio-stream = "0.1.12"
webpki = "0.22.0"
native-tls = "0.2.11"
url = "2.3.1"
openssl = "0.10.51"
tokio-rustls = "0.24.0"
rustls = "0.21.0"
webpki-roots = "0.23.0"
ed25519-dalek = "1.0.0"
sha3 = "0.10.6"
tokio-test = "0.4.2"
slog = "2.7.0"
slog-term = "2.9.0"
slog-async = "2.7.0"
thiserror = "1.0.40"
prost = "0.11.9"
sled = "0.34.7"
dashmap = "5.4.0"
bulletproofs = "4.0.0"
curve25519-dalek-ng = "4.1.1"
merlin = "3.0.0"
bs58 = "0.5.0"