[package]
name = "vec_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vec_cryptography = { path = "../vec_cryptography", version = "0.1.0"}
vec_proto = { path = "../vec_proto", version = "0.1.0"}
vec_transaction = { path = "../vec_transaction", version = "0.1.0"}
vec_mempool = { path = "../vec_mempool", version = "0.1.0"}
vec_errors = { path = "../vec_errors", version = "0.1.0"}

hex = "0.4.3"
futures = "0.3.28"
slog = "2.7.0"
slog-term = "2.9.0"
slog-async = "2.7.0"
tokio = "1.27.0"
tonic = { version = "0.9.2", features = ["tls", "transport"] }
log = "0.4.17"
serde = "1.0.160"
rcgen = "0.10.0"
pem = "2.0.1"
bincode = "1.3.3"
rand = "0.8.5"
tokio-stream = "0.1.12"
webpki = "0.22.0"
native-tls = "0.2.11"
url = "2.3.1"
openssl = "0.10.51"
tokio-rustls = "0.24.0"
rustls = "0.21.0"
webpki-roots = "0.23.0"
env_logger = "0.10.0"