[package]
name = "vec_storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vec_proto = { path = "../vec_proto", version = "0.1.0"}
vec_errors = { path = "../vec_errors", version = "0.1.0"}

tokio = "1.28.0"
async-trait = "0.1.68"
rand = "0.8.5"
ed25519-dalek = "1.0.1"
thiserror = "1.0.40"
sled = "0.34.7"
prost = "0.11.9"
bincode = "1.3.3"
serde = "1.0.163"
dashmap = "5.4.0"
curve25519-dalek-ng = "4.1.1"