[package]
name = "vec_store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vec_proto = { path = "../vec_proto", version = "0.1.0"}
vec_block = { path = "../vec_block", version = "0.1.0"}
vec_transaction = { path = "../vec_transaction", version = "0.1.0"}
vec_cryptography = { path = "../vec_cryptography", version = "0.1.0"}
vec_merkle = { path = "../vec_merkle", version = "0.1.0"}
vec_errors = { path = "../vec_errors", version = "0.1.0"}

hex = "0.4.3"
tokio = "1.28.0"
async-trait = "0.1.68"
rand = "0.8.5"
ed25519-dalek = "1.0.1"
thiserror = "1.0.40"
prost = "0.11.9"