[package]
name = "vec_transaction"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vec_cryptography = { path = "../vec_cryptography", version = "0.1.0"}
vec_proto = { path = "../vec_proto", version = "0.1.0"}

sha3 = "0.10.6"
hex = "0.4.2"
protobuf = "3.2.0"
prost = "0.11.8"
rand = "0.8.5"
ed25519-dalek = "1.0.1"
tokio = "1.28.0"
futures = "0.3.28"