[package]
name = "vec_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vec_crypto = { path = "../vec_crypto", version = "0.1.0"}
vec_proto = { path = "../vec_proto", version = "0.1.0"}
vec_errors = { path = "../vec_errors", version = "0.1.0"}

sha3 = "0.10.6"
protobuf = "3.2.0"
prost = "0.11.8"
rand = "0.8.5"
futures = "0.3.28"
bs58 = "0.5.0"
hex = "0.4.3"